# SergeevLabs

AlgorithmTheory/: gen.bat  laba.docx  out
AlgorithmTheory/Release-windows-x86_64/Phanes/: 100k.gyzno
DescreteStruct/extras/generator/: Program.cs  generator.csproj  generator.sln
DescreteStruct/extras/generator/Properties/: AssemblyInfo.cs
DescreteStruct/lab_1/: lab1.docx
DescreteStruct/lab_1/List/: List.csproj  List.sln  Program.cs  Reader.cs
DescreteStruct/lab_1/Stack/: Program.cs  Reader.cs  Stack.csproj  Stack.sln
DescreteStruct/lab_2/: Hashmap.cs  Program.cs  Reader.cs  lab2.docx  lab_2.csproj  lab_2.sln
DescreteStruct/lab_2/Properties/: AssemblyInfo.cs
DescreteStruct/lab_3/: Program.cs  Reader.cs  Tree.cs  lab_3.csproj  lab_3.sln
DescreteStruct/lab_3/Properties/: AssemblyInfo.cs
DescreteStruct/lab_4/BubbleSort/: BubbleSort.sln  Program.cs
DescreteStruct/lab_4/ShellSort/: Program.cs  Reader.cs
DescreteStruct/lab_4/ShellSort/ShellSort/: Program.cs  ShellSort.sln
DescreteStruct/lab_5/: lab5.docx
DescreteStruct/lab_5/CountingSort/: CountingSort.sln  Program.cs
DescreteStruct/lab_5/RadixSort/RadixSort/: Program.cs  RadixSort.sln
DescreteStruct/lab_6/: CMakeLists.txt  out  profile.py
DescreteStruct/lab_6/src/: graph.h  profile.cpp
